# Jupyter-notebook-renderer

./: .gitignore  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml
research/: manual.ipynb
src/jupyter_notebook_renderer/: __init__.py  custom_exception.py  logger.py  site.py  youtube.py
test/integration/: test_inti_yt.py
test/unit/: test_yt.py
