[metadata]
license=MIT
license_file= License
classifiers=
    programming Language :: python :: 3.7
    programming Language :: python :: 3.8
    programming Language :: python :: 3.9

[options]
install_requires=
    ensure
    py-youtube

python_requires=>3.7

[options.extras_requires]
testing=
    pytest>=7.1.3
    mypy=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
Jupyter Notebook renderer=py.typed

[flake8]
max-line-length=160
exclude=__init__.py
